# reminder-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
src/reminder_bot/: config.yaml  main.py
